edits for Biometrics

--- a/Round3/Manuscript-Biostatistics/preamble.tex
+++ b/Round3/Manuscript-Biostatistics/preamble.tex
@@ -4,22 +4,21 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{graphicx}
-\usepackage{todonotes}
+\usepackage{todonotes} % for grayed boxes
 %\usepackage{natbib}
 \usepackage{url}
-\usepackage[boxruled,vlined,linesnumbered]{algorithm2e}
+%\usepackage[boxruled,vlined,linesnumbered]{algorithm2e}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{lineno}
 \usepackage{tcolorbox}
-\usepackage{hyperref}
-\usepackage{fancyhdr}
 \AtBeginDocument{\let\textlabel\label}
 \hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=black}
 \usepackage{wasysym}
 
-\usepackage[perpage]{footmisc}
-\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\usepackage[bottom]{footmisc}
+%\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+%\renewcommand{\thefootnote}{\arabic{footnote}}
 
 
 
