--- a/Round3/Manuscript-Biostatistics/preamble.tex
+++ b/Round3/Manuscript-Biostatistics/preamble.tex
@@ -7,16 +7,17 @@
 \usepackage{todonotes} % for grayed boxes
 %\usepackage{natbib}
 \usepackage{url}
-%\usepackage[boxruled,vlined,linesnumbered]{algorithm2e}
+\usepackage[boxruled,vlined,linesnumbered]{algorithm2e}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{lineno}
 \usepackage{tcolorbox}
-\AtBeginDocument{\let\textlabel\label}
+%\AtBeginDocument{\let\textlabel\label}
 \hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=black}
 \usepackage{wasysym}
 
 \usepackage[bottom]{footmisc}
+\renewcommand{\thefootnote}{\arabic{footnote}}	
 %\renewcommand{\thefootnote}{\fnsymbol{footnote}}
 %\renewcommand{\thefootnote}{\arabic{footnote}}
 
