edits for Biometrics

--- a/Round3/Manuscript-Biostatistics/preamble.tex
+++ b/Round3/Manuscript-Biostatistics/preamble.tex
@@ -6,18 +6,18 @@
 \usepackage{graphicx}
 \usepackage{todonotes} % for grayed boxes
 %\usepackage{natbib}
-\usepackage{url}
+%\usepackage{url}
 \usepackage[boxruled,vlined,linesnumbered]{algorithm2e}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{lineno}
 \usepackage{tcolorbox}
-%\AtBeginDocument{\let\textlabel\label}
+\AtBeginDocument{\let\textlabel\label}
 \hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=black}
 \usepackage{wasysym}
 
-\usepackage[bottom]{footmisc}
-\renewcommand{\thefootnote}{\arabic{footnote}}	
+%\usepackage[perpage]{footmisc}
+%\renewcommand{\footnote}{\arabic{footnote}}	
 %\renewcommand{\thefootnote}{\fnsymbol{footnote}}
 %\renewcommand{\thefootnote}{\arabic{footnote}}
 
@@ -25,7 +25,7 @@
 
 %\pagestyle{fancy}
 
-\providecommand{\keywords}[1]{\textbf{\textit{Keywords:}} #1}
+%\providecommand{\keywords}[1]{\textbf{\textit{Keywords:}} #1}
 
 
 \captionsetup[figure]{labelfont=it,textfont={it},textfont=footnotesize}
