--- a/Round3/Manuscript-Biostatistics/samplebibtex.tex
+++ b/Round3/Manuscript-Biostatistics/samplebibtex.tex
@@ -874,7 +874,7 @@ According to these authors, this superiority is due to the larger test-samples w
 
 
 \subsubsection{Inappropriate Regularization}
-From the fact that \emph{svm.CV.cCV} is less accurate then \emph{svm.CV.c001} we learn than testing requires different regularization than predicting.
+From the fact that \emph{svm.CV.cCV} is less powerful than \emph{svm.CV.c001} we learn that testing requires different regularization than predicting.
 Does testing require more or less regularization?
 In our simulations, the optimal cross validated cost parameter for SVM (the cost of \emph{svm.CV.cCV}) was larger then that of the most powerful SVM (\emph{svm.CV.c001}).
 We thus conclude that that testing requires \emph{more} regularization  than predicting. 
@@ -882,13 +882,13 @@ Why would this happen?
 Regularization introduces bias and reduces bias. 
 For testing, we only care about the bias in the largest coordinates of $\mu$. 
 For predictions we care about the bias in all coordinates of $\mu$. 
-This means that when testing, the bias introduced by regularization is not limited by the smaller coordinates of $\mu$, permitting to remove move variance. 
+This means that when testing, the bias introduced by regularization is not limited by the smaller coordinates of $\mu$, permitting to remove more variance. 
 This phenomenon was also observed in \cite{cheng2017multiple}, which observe that recovering the support of a function requires different regularization (i.e. smoothing) than the \emph{matched filter theorem}, optimal for recovering the whole function.
 
 
 \subsubsection{Discretization}
 Permutation testing with discrete test statistics are known to be conservative.
-Firstly, because a Monte-Carlo sample of permutations will always be conservative compared to a full enumeration of permutations \cite{hemerik_exact_2014}.
+Firstly, because a Monte-Carlo sample of permutations will always be conservative compared to a full enumeration of permutations \citep{hemerik_exact_2014}.
 Secondly, because of the presence of ties which does not allow to exhaust the permissible false positive rate, unless randomization is introduced.
 Thirdly, because a highly discrete test-statistic, is insensitive to mild perturbations of the data.
 For an intuition consider the usage of the \emph{resubstitution accuracy}, i.e. the train-accuracy, as a test statistic. 
@@ -903,11 +903,11 @@ One of the effects of discretization is ties.
 The canonical remedy for ties--- random tie breaking --- showed only a minor improvement (not reported herein).
 
 Using our simulations we may quantify the power loss due to discretization, this is because Figher's LDA is equivalent to Hotelling's $T^2$ followed by a discretization stage. 
-From Figure~\ref{fig:simulation_1} we see that for the intermediate signal's strength, \emph{Hotelling} has roughly twice the power of \emph{lda.noCV.1}.
+From Figure~\ref{fig:simulation_1} we see that for the intermediate signals strength, \emph{Hotelling} has roughly twice the power of \emph{lda.noCV.1}.
 We thus conclude that the effect of discretization may be considerable. 
 
 
-The matter of discretization was addressed by a $2011$ post by Prof. Frank Harrell in \textsf{CrossValidated}; a Q\&A website for statistical questions \url{http://stats.stackexchange.com/questions/17408/how-to-assess-statistical-significance-of-the-accuracy-of-a-classifier}. :
+The matter of discretization was addressed in a $2011$ post by Prof. Frank Harrell in \textsf{CrossValidated}; a Q\&A website for statistical questions \url{http://stats.stackexchange.com/questions/17408/how-to-assess-statistical-significance-of-the-accuracy-of-a-classifier}. :
 \begin{quote}
 	... your use of proportion classified correctly as your accuracy score. This is a discontinuous improper scoring rule that can be easily manipulated because it is arbitrary and insensitive.
 \end{quote}
@@ -922,7 +922,7 @@ To do so we typically use a Neyman-Pearson Lemma type argument, and think:
 What type of signal is a test sensitive to?
 What is the direction of the effect? 
 Accuracy-tests are seen as ``black boxes'', even though they can be analyzed in the same way. 
-Gilron et at.\cite{gilron2017s} demonstrate that the type of signal captured by accuracy-tests is less interpretable to neuroimaging practitioners than two-group tests. 
+\citet{gilron2017s} demonstrate that the type of signal captured by accuracy-tests is less interpretable to neuroimaging practitioners than two-group tests. 
 
 Some authors prefer accuracy-tests because they can be seen as effect-size estimates, invariant to the sample size. 
 This is true, but the multivariate-statistics literature provides many multivariate effect-size estimators. 
@@ -935,10 +935,10 @@ Examples can be found, for instance, in \cite{stevens2012applied} and references
 \label{sec:fix_snr}
 
 For a fair comparison between simulations, in particular between those with different $\Sigma$, we needed to fix the difficulty of the problem.
-For a fair comparison we fix the Kullback–Leibler Divergence between distributions of sample means. 
+We fix the Kullback–Leibler Divergence between distributions of sample means. 
 Abusing notation, we fix $KL[\bar x_1,\bar x_0]=c^2 p$, which is the same as fixing $\Vert \mu \Vert^2_\Theta$, with the exception of the large sample (\ref{sec:large-sample}) and the heavytailed analysis (\ref{sec:heavytailed}). 
 
-Our choice implies that the Euclidean norm of $\delta:=\mathbb{E}(x_1)-\mathbb{E}(x_0)$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
+Our choice implies that the Euclidean norm of $\mu:=\mathbb{E}(x_1)-\mathbb{E}(x_0)$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
 An initial intuition may suggest that detecting signal in the low variance PCs is easier than in the high variance PCs. 
 This is true when fixing $\Vert \mu \Vert_2$, but not when fixing $\Vert \mu \Vert_{\Theta}$.
 
@@ -982,7 +982,7 @@ Why is that?
 
 We attribute this phenomenon to regularization.
 Whereas the signal, $\mu$, varies in direction, the regularization of $\hat \Sigma$ does not. 
-We borrow intuition from ridge regression, for which closed form solutions are available, and is equivalent to LDA with Tikhonov regularization. 
+We borrow intuition from ridge regression, for which closed form solutions are available (and is equivalent to LDA with Tikhonov regularization). 
 We first recall that in ridge regression 
 $$\hat y = X'(\hat \Sigma +\lambda I)^{-1}X'y,$$
 so that penalizing $\Vert \beta \Vert_2^2$, ends up with a Tikhonov regularization of the covariance estimator.
@@ -1003,7 +1003,7 @@ This intuition explains the fact that unregularized tests have more power than t
 In our set of simulations we discussed ``dense'' alternatives, in the sense that all coordinates carry signal.
 Dense alternatives are motivated by neuroimaging where most brain locations in a regions carry signal.
 In a genetic application, a ``sparse'' alternative may be more plausible. 
-Figure~\ref{fig:sparse} reports the usual results, where $\mu$ is sparse. 
+Figure~\ref{fig:sparse} reports power when $\mu$ is sparse. 
 As usual, two-group tests dominate accuracy-tests, only this time, the winners are not the $T^2$ type statistics, but rather, the tests for sparse shifts (\emph{Cai}, \emph{Simes}).
 
 \begin{figure}[ht]
@@ -1043,7 +1043,7 @@ This is perhaps the reason why \cite{harchaoui2009kernel}, who proposed using th
 
 
 \subsection{A Good accuracy-test}
-Brain-computer interfaces and clinical diagnostics \cite{olivetti_induction_2012,wager_fmri-based_2013} are examples in which we want to know not only if information is encoded in a region, but rather, that a particular predictor can extract this information. 
+Brain-computer interfaces and clinical diagnostics \citep{olivetti_induction_2012,wager_fmri-based_2013} are examples in which we want to know not only if information is encoded in a region, but rather, that a particular predictor can extract this information. 
 In these cases an accuracy-test cannot be replaced by a two-group test. 
 For the cases an accuracy-test cannot be replaced with other tests, we collect the following observations.
 
