--- a/Round3/Manuscript-Biostatistics/samplebibtex.tex
+++ b/Round3/Manuscript-Biostatistics/samplebibtex.tex
@@ -1083,6 +1083,7 @@ As put by \cite{ramdas_classification_2016}:
 % use section* for acknowledgment
 \section*{Acknowledgment}
 JDR wishes to thank, Jesse B.A. Hemerik, Yakir Brechenko, Omer Shamir, Joshua Vogelstein, Gilles Blanchard, and Jason Stein for their valuable inputs. 
+JDR also thanks ISF grant 924/16 for the computing infrastructure used in this research. 
 
 
 \newpage
